// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders basic Table with custom cells 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <div
          className="tableHeaderContainer"
        >
          <div
            className="tableHeader"
          >
            testHeader
          </div>
          <div
            className="tableSortingContainer"
          >
            <button
              className="tableSortingButton"
              id="button-asc"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="tableSortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                />
              </svg>
            </button>
            <button
              className="tableSortingButton"
              id="button-desc"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="tableSortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                />
              </svg>
            </button>
          </div>
        </div>
      </th>
      <th>
        <div
          className="tableHeaderContainer"
        >
          <div
            className="tableHeader"
          >
            testHeader2
          </div>
          <div
            className="tableSortingContainer"
          >
            <button
              className="tableSortingButton"
              id="button-asc"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="tableSortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                />
              </svg>
            </button>
            <button
              className="tableSortingButton"
              id="button-desc"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="tableSortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                />
              </svg>
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="/"
          onClick={[Function]}
        >
          test
        </a>
      </td>
      <td>
        <span>
          test2
          $ - extra text
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Renders basic Table with initial sorting 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <div
          className="tableHeaderContainer"
        >
          <div
            className="tableHeader"
          >
            testHeader
          </div>
          
        </div>
      </th>
      <th>
        <div
          className="tableHeaderContainer"
        >
          <div
            className="tableHeader"
          >
            testHeader2
          </div>
          
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        brian
      </td>
      <td>
        amanda
      </td>
    </tr>
    <tr>
      <td>
        amanda
      </td>
      <td>
        brian
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Renders basic Table with sorting 1`] = `
<Table
  columns={
    Array [
      Object {
        "accessor": "test",
        "header": "testHeader",
        "sortable": true,
      },
      Object {
        "accessor": "test2",
        "header": "testHeader2",
        "sortable": true,
      },
    ]
  }
  dataRows={
    Array [
      Object {
        "test": "b",
        "test2": "b",
      },
      Object {
        "test": "a",
        "test2": "a",
      },
    ]
  }
  initialSortingColumn={-1}
>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          key="column-0"
        >
          <div
            className="tableHeaderContainer"
          >
            <div
              className="tableHeader"
            >
              testHeader
            </div>
            <div
              className="tableSortingContainer"
            >
              <button
                className="tableSortingButton"
                id="button-asc"
                key="0-asc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                    />
                  </svg>
                </Icon>
              </button>
              <button
                className="tableSortingButton"
                id="button-desc"
                key="0-desc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                    />
                  </svg>
                </Icon>
              </button>
            </div>
          </div>
        </th>
        <th
          key="column-1"
        >
          <div
            className="tableHeaderContainer"
          >
            <div
              className="tableHeader"
            >
              testHeader2
            </div>
            <div
              className="tableSortingContainer"
            >
              <button
                className="tableSortingButton"
                id="button-asc"
                key="1-asc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                    />
                  </svg>
                </Icon>
              </button>
              <button
                className="tableSortingButton"
                id="button-desc"
                key="1-desc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                    />
                  </svg>
                </Icon>
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="row-0"
      >
        <td
          key="row-0-col-0"
        >
          b
        </td>
        <td
          key="row-0-col-1"
        >
          b
        </td>
      </tr>
      <tr
        key="row-1"
      >
        <td
          key="row-1-col-0"
        >
          a
        </td>
        <td
          key="row-1-col-1"
        >
          a
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`Renders basic Table without crashing 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <div
          className="tableHeaderContainer"
        >
          <div
            className="tableHeader"
          >
            testHeader
          </div>
          
        </div>
      </th>
      <th>
        <div
          className="tableHeaderContainer"
        >
          <div
            className="tableHeader"
          >
            testHeader2
          </div>
          
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        amanda
      </td>
      <td>
        brian
      </td>
    </tr>
    <tr>
      <td>
        brian
      </td>
      <td>
        amanda
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sort table correctly based on comma seperated numbers within strings 1`] = `
<Table
  columns={
    Array [
      Object {
        "accessor": "name",
        "header": "Name",
        "sortable": true,
      },
      Object {
        "accessor": "value",
        "header": "Value",
        "sortable": true,
      },
    ]
  }
  dataRows={
    Array [
      Object {
        "name": "second",
        "value": "3,20",
      },
      Object {
        "name": "first",
        "value": "3,50",
      },
    ]
  }
  initialSortingColumn={1}
>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          key="column-0"
        >
          <div
            className="tableHeaderContainer"
          >
            <div
              className="tableHeader"
            >
              Name
            </div>
            <div
              className="tableSortingContainer"
            >
              <button
                className="tableSortingButton"
                id="button-asc"
                key="0-asc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                    />
                  </svg>
                </Icon>
              </button>
              <button
                className="tableSortingButton"
                id="button-desc"
                key="0-desc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                    />
                  </svg>
                </Icon>
              </button>
            </div>
          </div>
        </th>
        <th
          key="column-1"
        >
          <div
            className="tableHeaderContainer"
          >
            <div
              className="tableHeader"
            >
              Value
            </div>
            <div
              className="tableSortingContainer"
            >
              <button
                className="tableSortingButton"
                id="button-asc"
                key="1-asc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                    />
                  </svg>
                </Icon>
              </button>
              <button
                className="tableSortingButton"
                id="button-desc"
                key="1-desc"
                onClick={[Function]}
                type="button"
              >
                <Icon
                  ariaHidden={true}
                  className="tableSortingArrowIcon"
                >
                  <svg
                    aria-hidden={true}
                    className="tableSortingArrowIcon"
                    viewBox="0 0 293 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                    />
                  </svg>
                </Icon>
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="row-0"
      >
        <td
          key="row-0-col-0"
        >
          second
        </td>
        <td
          key="row-0-col-1"
        >
          3,20
        </td>
      </tr>
      <tr
        key="row-1"
      >
        <td
          key="row-1-col-0"
        >
          first
        </td>
        <td
          key="row-1-col-1"
        >
          3,50
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;
